<resources>
    <string name="app_name">Health Calculation</string>

    <string name="app_title">Health\nCalc</string>
    <string name="login_activity_login">Login</string>
    <string name="login_activity_subtitle">Do the login to continue</string>
    <string name="login_activity_email">Email</string>
    <string name="login_activity_password">Password</string>
    <string name="login_activity_enter">Enter</string>
    <string name="login_activity_lembrar_me">Lembrar-me</string>
    <string name="login_activity_esqueci_a_senha">Esqueci a senha</string>
    <string name="login_activity_n_o_tem_uma_conta">Não tem uma conta?</string>
    <string name="login_activity_criar_uma_conta_agora">Criar uma conta agora</string>
    <string name="login_activity_desenvolvido_por_thiago_m_trentin">Desenvolvido por Thiago M. Trentin</string>
    <string name="trocar_foto">Trocar foto</string>
    <string name="dados_de_autenticacao">Dados de Autenticação</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="nome">Nome</string>
    <string name="profissao">Profissão</string>
    <string name="altura">Altura</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="genero">Genero</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="vamos_pesar">Vamos nos pesar?</string>
    <string name="texto_apos_info">Mantenha seu peso sempre autalizado, assim você poderá acompanhar sua evolução</string>
    <string name="data_da_pesagem">Data da pesagem:</string>
    <string name="data_pesagem">20/11/2021</string>
    <string name="nivel_atividade">Nível de atividade:</string>
    <string name="novo_peso">Seu novo peso:</string>
    <string name="exemplo_peso">68 Kg</string>
    <string name="registrar_peso">Registrar peso</string>
    <string name="pesar_agora">Pesar agora</string>

    <string-array name="niveis">
        <item>Atividade Leve</item>
        <item>Atividade Moderada</item>
        <item>Atividade Intensa</item>
    </string-array>


</resources>