<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".DashBoardActivity"
android:orientation="vertical"
android:background="#0A000000">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        app:cardCornerRadius="30dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/krusty"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="32dp"
    android:paddingEnd="32dp">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/pilates"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vamos_pesar"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_apos_info"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawableTint="@color/primary_light"
        android:layout_marginTop="12dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dados_de_autenticacao"
        android:textSize="16sp"
        android:textColor="@color/primary_light"
        android:drawableStart="@drawable/ic_baseline_accessibility_24"
        android:drawableTint="@color/primary_light"
        android:layout_marginTop="28dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_da_pesagem"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_pesagem"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nivel_atividade"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        app:cardBackgroundColor="@color/primary_light"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
            android:drawableTint="@color/primary"
            android:layout_gravity="end"
            />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/novo_peso"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exemplo_peso"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/registrar_peso"
        android:padding="0dp"
        android:textSize="24dp"
        android:textAllCaps="false"/>

</LinearLayout>
</ScrollView>

</LinearLayout>