<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <RelativeLayout
       android:id="@+id/rl_header"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/primary_dark"
       android:paddingTop="16dp"
       android:paddingStart="32dp"
       android:paddingEnd="32dp"
       android:layout_alignParentTop="true"
       android:layout_alignParentStart="true"
       android:layout_alignParentEnd="true">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentStart="true"
           android:text="@string/app_title"
           android:textAppearance="@style/title"
           android:id="@+id/tv_title"
           />
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/bmi"
           android:layout_alignParentEnd="true"
           android:layout_alignTop="@+id/tv_title"
           android:layout_alignBottom="@+id/tv_title"
           />
   </RelativeLayout>

    <ImageView
        android:id="@+id/wave_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/rl_header"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_wave_down" />

    <ImageView
        android:id="@+id/wave_bottom"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_wave_up"
        android:scaleType="fitXY" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/wave_top"
        android:layout_above="@+id/wave_bottom"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_activity_login"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_activity_subtitle"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="32dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_activity_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email_24"
                    android:drawablePadding="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/login_activity_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:drawableStart="@drawable/lock_24"
                    android:drawablePadding="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_activity_enter"
                    android:padding="15dp"
                    android:layout_marginTop="12dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_activity_lembrar_me"
                    android:layout_gravity="end" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_activity_esqueci_a_senha"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textAllCaps="false"
                    android:layout_gravity="end"
                    android:padding="0dp"
                    android:layout_marginTop="-20dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:padding="0dp"
                        android:layout_marginTop="-20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_activity_n_o_tem_uma_conta"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_activity_criar_uma_conta_agora"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:textAllCaps="false"
                            android:layout_marginStart="8dp"
                            android:padding="0dp"/>
                    </LinearLayout>

                <!--<RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Java"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PHP" />
                </RadioGroup>-->
        </LinearLayout>
    </ScrollView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_desenvolvido_por_thiago_m_trentin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginBottom="4dp"
        android:textColor="@color/white"/>


</RelativeLayout>